--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,7 @@
 PORT=5001
-MONGO_URI=mongodb+srv://root:root@mernapp.4fbxyvx.mongodb.net/?retryWrites=true&w=majority" 
+
+
+
+MONGO_URI=mongodb+srv://root:root@mernapp.4fbxyvx.mongodb.net/MERNapp?retryWrites=true&w=majority
+
+# MONGO_URI=mongodb+srv://root:root@mernapp.4fbxyvx.mongodb.net/?retryWrites=true&w=majority" 
